--- a/_includes/sections/how-it-works.html
+++ b/_includes/sections/how-it-works.html
@@ -2,9 +2,9 @@
 <section class="site-section section-focus how-it-works-section" id="how-it-works-1">
   <div class="container">
     <!-- How-It-Works Page Title -->
-    <h2 class="site-section__title">{{ page.title }}</h2>
+    <h2 class="site-section__title">{{ page.header-title }}</h2>
     <!-- How-It-Works Page Description -->
-    <h3 class="site-section__description">{{ page.description }}</h3>
+    <h3 class="site-section__description">{{ page.header-description }}</h3>
     <div class="row">
       <iframe class="tutorial" src="{{page.video}}" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
