--- a/css/style.css
+++ b/css/style.css
@@ -7198,6 +7198,10 @@ section.download-section {
   font-size: 1.2rem;
 }
 
+section.download-section .site-section__description {
+  text-transform: uppercase;
+}
+
 section.download-section .download {
   padding: 60px 0;
 }
@@ -7210,6 +7214,16 @@ section.download-section .download:first-child {
 section.download-section .download:last-child {
   background-color: #2d3e50;
   color: #fff;
+}
+
+@media (max-width: 768px) {
+  section.download-section .download:last-child {
+    background-color: #fff;
+    color: #5c5d5f;
+    padding: 0;
+    text-align: center;
+    font-size: 18px;
+  }
 }
 
 section.download-section .download-title {
@@ -7278,6 +7292,12 @@ section.download-section .download-action {
   display: flex;
 }
 
+@media (max-width: 768px) {
+  section.download-section .download-action {
+    padding: 0 !important;
+  }
+}
+
 section.download-section .download-action .button {
   padding-left: 25px;
   padding-right: 25px;
@@ -7296,15 +7316,33 @@ section.download-section .download-action code {
   font-size: 1.3rem;
 }
 
+@media (max-width: 768px) {
+  section.download-section .download-action code {
+    margin-top: 30px;
+    background-color: #2d3e50;
+    color: #fff;
+    font-size: 14px;
+    padding: 40px 0;
+    white-space: nowrap;
+    overflow-x: auto;
+  }
+}
+
 section.download-section .download-action .action-description {
   position: absolute;
   bottom: -1.8em;
-  font-size: .6em;
+  font-size: 0.6em;
 }
 
 section.download-section .download-command {
   margin-top: 50px;
   margin-bottom: 70px;
+}
+
+@media (max-width: 768px) {
+  section.download-section .download-command {
+    margin-bottom: 30px;
+  }
 }
 
 section.download-section .download-command .command-label {
@@ -7338,6 +7376,20 @@ section.download-section .download .row {
           align-items: flex-start;
 }
 
+@media (max-width: 768px) {
+  section.download-section .download .download-choices > div {
+    background-color: #F1F3F6;
+    color: #1f2739;
+    margin-top: 50px;
+    width: 110%;
+    margin-left: -5%;
+    margin-right: -5%;
+  }
+  section.download-section .download .download-choices > div:last-child {
+    margin-bottom: 80px;
+  }
+}
+
 section.download-section .download .download-choices .choice {
   background-color: #fff;
   color: #1f2739;
@@ -7354,6 +7406,7 @@ section.download-section .download .download-choices .choice {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 30px;
 }
 
 section.download-section .download .download-choices .choice-title {
@@ -7376,6 +7429,7 @@ section.download-section .download .download-choices .choice-title .circle {
   -webkit-border-radius: 50%;
           border-radius: 50%;
   width: 40px;
+  min-width: 40px;
   height: 40px;
   display: -webkit-box;
   display: -webkit-flex;
@@ -7520,6 +7574,34 @@ section.download-section .download .download-choices .choice-downloads .download
 section.download-section .download .download-choices .choice-downloads .download-item i {
   font-size: 18px;
   margin-right: 5px;
+}
+
+@media (max-width: 768px) {
+  section.download-section .download .download-choices .choice {
+    background-color: transparent;
+    min-height: inherit;
+    padding-top: 30px;
+  }
+  section.download-section .download .download-choices .choice-title {
+    position: relative;
+    text-align: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+    font-size: 20px;
+    text-transform: inherit;
+  }
+  section.download-section .download .download-choices .choice-title .circle {
+    position: absolute;
+    left: 10px;
+  }
+  section.download-section .download .download-choices .choice-description {
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+  }
 }
 
 /**
