--- a/css/style.css
+++ b/css/style.css
@@ -1073,11 +1073,43 @@ table {
       -ms-user-select: none;
           user-select: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  margin-bottom: 30px;
 }
 
-.owl-carousel .owl-controls .owl-page,
-.owl-carousel .owl-controls .owl-buttons div {
+.owl-carousel .owl-controls .owl-pagination {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.owl-carousel .owl-controls .owl-pagination .owl-page {
   cursor: pointer;
+  margin: 0 10px;
+}
+
+.owl-carousel .owl-controls .owl-pagination .owl-page span {
+  width: 15px;
+  height: 15px;
+  background-color: #5c5d5f;
+  display: block;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  -webkit-transition: all .2s;
+  -o-transition: all .2s;
+  transition: all .2s;
+}
+
+.owl-carousel .owl-controls .owl-pagination .owl-page.active > span {
+  background-color: #f15d2f;
 }
 
 .owl-carousel .grabbing {
@@ -5785,6 +5817,14 @@ section.products-pricing-section .plans .plan__price > span {
   section.products-pricing-section .plans .plan__price > span {
     font-size: 18px;
   }
+}
+
+section.products-pricing-section .plans--xs .col-plan {
+  width: 100%;
+}
+
+section.products-pricing-section .plans--xs .col-plan .plan {
+  margin-bottom: 0;
 }
 
 section.products-pricing-section .pricing-table {
