--- a/css/style.css
+++ b/css/style.css
@@ -5824,7 +5824,67 @@ section.products-pricing-section .plans--xs .col-plan {
 }
 
 section.products-pricing-section .plans--xs .col-plan .plan {
+  height: inherit;
+  min-height: 500px;
   margin-bottom: 0;
+}
+
+section.products-pricing-section .plans--xs .col-plan .plan__features {
+  margin-top: 20px;
+}
+
+section.products-pricing-section .plans--xs .col-plan .plan__features ul {
+  min-height: 240px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+section.products-pricing-section .plans--xs .col-plan .plan__features ul li {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 20px;
+  text-align: center;
+  position: relative;
+  padding-left: 30px;
+}
+
+section.products-pricing-section .plans--xs .col-plan .plan__features ul li::before {
+  content: '';
+  position: absolute;
+  width: 7px;
+  height: 2px;
+  background-color: #f15d2f;
+  left: 4px;
+  top: 9px;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+section.products-pricing-section .plans--xs .col-plan .plan__features ul li::after {
+  content: '';
+  position: absolute;
+  width: 13px;
+  height: 2px;
+  background-color: #f15d2f;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  left: 8px;
+  top: 8px;
 }
 
 section.products-pricing-section .pricing-table {
