--- a/_scss/layout/_pricing.scss
+++ b/_scss/layout/_pricing.scss
@@ -172,8 +172,11 @@ section.products-pricing-section {
           justify-content: center;
           align-items: center;
           line-height: 1.2;
+          &>.ammount {
+            font-size: 24px;
+          }
           &>.ammount--tip {
-            font-size: $text-font-size-1;
+            font-size: 18px;
           }
           &>.has-asterisk {
             position: relative;
