--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -50,11 +50,11 @@
     </ul>
     <div class="products-body-actions hidden-xs">
       <a href="{{ site.links.download }}" class="button">DOWNLOAD</a>
-      <a href="{{ site.links.get_a_demo }}" class="button button--outline">GET A DEMO</a>
+      <a href="{{ site.links.telegram }}" class="button button--outline">GET A DEMO</a>
       <a href="{{ site.links.learn_more }}" class="link link--arrow">LEARN MORE</a>
     </div>
     <div class="products-body-actions hidden-sm hidden-md hidden-lg">
-      <a href="{{ site.links.get_a_demo }}" class="button button--outline">GET A DEMO</a>
+      <a href="{{ site.links.telegram }}" class="button button--outline">GET A DEMO</a>
       <a href="{{ site.links.download }}" class="button button--outline">DOWNLOAD</a>
       <a href="{{ site.links.learn_more }}" class="button button--outline">DOCUMENTATION</a>
     </div>
