fix: pricing menu&page, hero image url

--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -8,7 +8,9 @@
 
     <!-- Products Pricing Cards (Desktop) -->
     <div class="plans row hidden-xs">
-      <div class="col-blank"><!-- blank area --></div>
+      <div class="col-blank col-blank--text">
+        All plans include access to the <a href="products/diode-network">Diode Network Explorer</a> and use of the <a href="products/diode-cli">Diode CLI</a>
+      </div>
       {% for plan in page.plans %}
         <div class="col-plan">
           <div class="plan">
