--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -151,11 +151,12 @@ header.site-header {
               position: fixed;
               left: 0;
               top: $desktop-header-height;
-              background-color: $white;
+              background-color: $bg;
               width: 100%;
               z-index: 1;
               padding-top: 50px;
               padding-bottom: 50px;
+              border-bottom: 2px solid $orange;
 
               .container {
                 margin-left: auto;
