--- a/_scss/layout/_how-it-works.scss
+++ b/_scss/layout/_how-it-works.scss
@@ -70,7 +70,7 @@ section.how-it-works-section--2 {
       max-width: 800px;
       margin: 0 auto;
       @media (max-width: 768px) {
-        font-size: 18px;
+        font-size: $text-font-size-2-xs;
       }
     }
   }
@@ -156,7 +156,7 @@ section.how-it-works-section--3 {
                   text-align: center;
                   width: 100%;
                   color: $web-blue;
-                  font-size: 18px;
+                  font-size: $text-font-size-2-xs;
                 }
                 img {
                   display: none;
@@ -173,7 +173,7 @@ section.how-it-works-section--3 {
               font-size: $text-font-size-1;
               color: $web-blue;
               @media (max-width: 768px) {
-                font-size: 18px;
+                font-size: $text-font-size-2-xs;
               }
             }
           }
@@ -232,7 +232,7 @@ section.how-it-works-section--3 {
         @media (max-width: 768px) {
           display: block;
           padding: 50px 5%;
-          font-size: 18px;
+          font-size: $text-font-size-2-xs;
         }
       }
 
@@ -276,7 +276,7 @@ section.how-it-works-section--3 {
               width: 100%;
               text-align: center;
               margin-bottom: 10px;
-              font-size: 18px;
+              font-size: $text-font-size-2-xs;
               line-height: 1.5;
               &::after {
                 content: "";
@@ -294,7 +294,7 @@ section.how-it-works-section--3 {
           &-description > p {
             font-size: $text-font-size-1;
             @media (max-width: 768px) {
-              font-size: 18px;
+              font-size: $text-font-size-2-xs;
             }
           }
         }
@@ -352,7 +352,7 @@ section.how-it-works-section--4 {
       margin: 0 auto 50px auto;
       color: $web-blue;
       @media (max-width: 768px) {
-        font-size: 18px;
+        font-size: $text-font-size-2-xs;
       }
     }
 
@@ -396,7 +396,7 @@ section.how-it-works-section--4 {
           line-height: 1.5;
           @media (max-width: 768px) {
             color: $dark-blue;
-            font-size: 18px;
+            font-size: $text-font-size-2-xs;
             max-width: 200px;
             margin-left: auto;
             margin-right: auto;
@@ -408,7 +408,7 @@ section.how-it-works-section--4 {
           color: $web-blue;
           @media (max-width: 768px) {
             color: $dark-blue;
-            font-size: 18px;
+            font-size: $text-font-size-2-xs;
           }
         }
       }
