--- a/_scss/layout/_pricing.scss
+++ b/_scss/layout/_pricing.scss
@@ -103,7 +103,7 @@ section.products-pricing-section {
             &__price {
                 font-size: 34px;
                 &>span {
-                    font-size: 18px;
+                    font-size: $text-font-size-2-xs;
                 }
             }
         }
@@ -193,7 +193,7 @@ section.products-pricing-section {
             font-size: 24px;
           }
           &>.ammount--tip {
-            font-size: 18px;
+            font-size: $text-font-size-2-xs;
           }
           &>.has-asterisk {
             position: relative;
