--- a/_scss/layout/_products.scss
+++ b/_scss/layout/_products.scss
@@ -88,7 +88,7 @@ section.products-body-section {
         }
 
         @media (max-width: 768px) {
-          font-size: 18px;
+          font-size: $text-font-size-2-xs;
           display: flex;
           justify-content: center;
           &>img {
@@ -101,7 +101,7 @@ section.products-body-section {
       &-description {
         font-size: $text-font-size-1;
         @media (max-width: 768px) {
-          font-size: 18px;
+          font-size: $text-font-size-2-xs;
         }
       }
     }
