fix: font size missed

--- a/_scss/layout/_sections.scss
+++ b/_scss/layout/_sections.scss
@@ -31,7 +31,7 @@
     }
 
     @media (max-width: 993px) {
-      font-size: $title-font-size-2-xs;
+      font-size: $text-font-size-5-xs;
       margin-top: 50px;
       margin-bottom: 40px;
       &:after {
