--- a/_scss/modules/_config.scss
+++ b/_scss/modules/_config.scss
@@ -11,7 +11,7 @@ $text-font-size-1-xs: 16px;
 $text-font-size-2-xs: 18px;
 $text-font-size-3-xs: 20px;
 $text-font-size-4-xs: 22px;
-
+$text-font-size-5-xs: 24px;
 // Animations Timing
 $transition-links: 300ms;
 $animation-arrow-header-time: 2.5s;
