--- a/css/style.css
+++ b/css/style.css
@@ -4253,7 +4253,7 @@ code.highlighter-rouge {
 
 @media (max-width: 993px) {
   .site-section__title {
-    font-size: 2.2rem;
+    font-size: 24px;
     margin-top: 50px;
     margin-bottom: 40px;
   }
