fix: home page links

--- a/_includes/sections/features.html
+++ b/_includes/sections/features.html
@@ -44,7 +44,7 @@
         </a>
       </div>
       <div class="col-sm-6">
-        <a class="link link--arrow" alt="Learn More" href="{{ site.links.learn_more }}">
+        <a class="link link--arrow" alt="Learn More" href="products/d-drive">
           LEARN MORE
         </a>
       </div>
