--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -26,10 +26,10 @@
             </span>
           </a>
           {% endfor %}
-          <a class="link text-sm link--white link--arrow" href="{{ site.links.learn_more }}">
+          <a class="link text-sm link--white link--arrow" href="products/d-drive">
             LEARN MORE
           </a>
-          <a class="link text-xs link--white link--arrow" href="{{ site.links.learn_more }}">
+          <a class="link text-xs link--white link--arrow" href="products/d-drive">
             DIODE IS THE FUTURE OF WEB3
           </a>
           <div class="action-descriptoin">
