--- a/_scss/layout/_features.scss
+++ b/_scss/layout/_features.scss
@@ -57,7 +57,7 @@ section.features-section {
     }
 
     .feature-title {
-      font-size: 2em;
+      font-size: $title-font-size-1;
       text-transform: uppercase;
       margin-bottom: 20px;
       color: $web-blue;
