--- a/_scss/layout/_global.scss
+++ b/_scss/layout/_global.scss
@@ -11,7 +11,7 @@ body {
   // Typography
   font: {
     family: $font-family, Arial, sans-serif;
-    size: $global-font-size;
+    size: $text-font-size-1;
     weight: normal;
   }
 
